--- a/css/style.css
+++ b/css/style.css
@@ -34,194 +34,238 @@ https://utopia.fyi/type/calculator/?c=360,14,1.2,1440,16,1.333,5,2,&s=0.75%7C0.5
   margin: 0 auto;
 }
 
+body {
+  line-height: 1.5;
+}
+
+body.hidden-scroll {
+  overflow-y: hidden;
+}
+
+.header_container {
+  max-width: 1170px;
+  margin: auto;
+}
+
 header {
-  height: auto;
-  width: 100%;
-  padding: clamp(0.88rem, 0.83rem + 0.19vw, 1rem) 0;
+  position: absolute;
   background-color: #130c0c;
-}
-header .fa-solid {
-  color: #bb0722;
-  font-size: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
-}
-
-.navigation_top {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  padding-bottom: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
-  border-bottom: solid 1px rgba(255, 255, 255, 0.1);
-}
-.navigation_top p {
-  font-family: "Open Sans", sans-serif;
-  font-size: 14px;
-  color: #FFFFFF;
-}
-.navigation_top a {
-  font-family: "Montserrat", sans-serif;
-  font-size: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
-  line-height: 145%;
-  color: #FFFFFF;
-  font-family: "Open Sans", sans-serif;
-  font-size: 14px;
-  color: #FFFFFF;
-  transition: all ease 0.5s;
-}
-.navigation_top a:hover {
-  opacity: 0.5;
-}
-.navigation_top .navigation_top_left li {
-  cursor: pointer;
-}
-.navigation_top .navigation_top_right {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  gap: clamp(1.75rem, 1.67rem + 0.37vw, 2rem);
-}
-.navigation_top .navigation_top_right .navigation_top_right_contact {
-  display: flex;
-  flex-direction: row;
-  gap: 8px;
-  align-items: center;
-}
-.navigation_top .navigation_top_right .navigation_top_right_hours {
-  display: flex;
-  flex-direction: row;
-  gap: 8px;
-  align-items: center;
+  width: 100%;
+  left: 0;
+  top: 0;
+  z-index: 99;
 }
 
-.navigation_bottom {
+.header_bottom {
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding-top: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
+  padding: clamp(0.69rem, 0.67rem + 0.09vw, 0.75rem) 0;
 }
-.navigation_bottom .navigation_bottom_left .logo img {
+
+.header .logo a > img {
   height: clamp(2.63rem, 2.5rem + 0.56vw, 3rem);
 }
-.navigation_bottom .navigation_bottom_right nav .links_container {
-  display: flex;
-  flex-direction: row;
-  gap: clamp(1.75rem, 1.67rem + 0.37vw, 2rem);
-  align-items: center;
-}
-.navigation_bottom .navigation_bottom_right nav .links_container .link_item {
+
+.header .menu > .menu_item {
   display: inline-block;
-}
-.navigation_bottom .navigation_bottom_right nav .links_container .link_item a {
-  font-family: "Open Sans", sans-serif;
-  font-size: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
-  line-height: 145%;
-  color: #FFFFFF;
-  transition: all ease 0.5s;
-}
-.navigation_bottom .navigation_bottom_right nav .links_container .link_item a:hover {
-  color: #bb0722;
-}
-.navigation_bottom .navigation_bottom_right nav .links_container .drop_down_menu {
+  margin-left: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
   position: relative;
-  margin: 0;
-  padding: 0;
-}
-.navigation_bottom .navigation_bottom_right nav .links_container .drop_down_menu button {
-  font-family: "Open Sans", sans-serif;
-  font-size: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
-  line-height: 145%;
-  color: #FFFFFF;
-  background: transparent;
-  border: none;
-  transition: all ease 0.5s;
-  margin: 0;
-  padding: 0;
-  cursor: pointer;
-}
-.navigation_bottom .navigation_bottom_right nav .links_container .drop_down_menu button .fa-solid {
-  color: #bb0722;
-  font-size: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
-  padding-left: 8px;
-}
-.navigation_bottom .navigation_bottom_right nav .links_container .drop_down_menu button:hover {
-  color: #bb0722;
-}
-.navigation_bottom .navigation_bottom_right nav .links_container .drop_down_menu .drop_down {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: 12px;
-  position: absolute;
-  top: clamp(2.63rem, 2.5rem + 0.56vw, 3rem);
-  left: -64px;
-  width: 0;
-  height: 0;
-  visibility: none;
-  opacity: 0;
-  background-color: #130c0c;
-  z-index: 100;
-  padding: 0 clamp(1.75rem, 1.67rem + 0.37vw, 2rem) clamp(1.75rem, 1.67rem + 0.37vw, 2rem) clamp(1.75rem, 1.67rem + 0.37vw, 2rem);
-}
-.navigation_bottom .mobile_btn {
-  display: none;
-  position: relative;
-  z-index: 1000;
-}
-.navigation_bottom .mobile_btn .mobile_btn_flex {
-  display: flex;
-  flex-direction: column;
-  gap: 6px;
-  padding: 8px;
-  background-color: #fff;
-  border-radius: 4px;
-  cursor: pointer;
-}
-.navigation_bottom .mobile_btn .mobile_btn_flex .btn_line {
-  height: 2px;
-  width: clamp(1.75rem, 1.67rem + 0.37vw, 2rem);
-  background-color: #bb0722;
 }
 
-@media screen and (max-width: 1008px) {
-  .navigation_top {
-    display: none !important;
+.header .menu > .menu_item > a {
+  font-family: "Open Sans", sans-serif;
+  font-size: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
+  text-transform: uppercase;
+  display: block;
+  padding: clamp(0.69rem, 0.67rem + 0.09vw, 0.75rem) 0;
+  color: #FFFFFF;
+  transition: all ease 0.3s;
+}
+
+.header .menu > .menu_item > a .fa-solid {
+  display: inline-block;
+  margin-left: 5px;
+  transition: all ease 0.3s;
+  position: relative;
+  pointer-events: none;
+}
+
+.header .menu > .menu_item > .sub_menu > .menu_item:hover > a,
+.header .menu > .menu_item:hover > a {
+  color: #bb0722;
+}
+
+.header .menu_overlay {
+  position: fixed;
+  z-index: 999;
+  background-color: rgba(0, 0, 0, 0.8);
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  visibility: hidden;
+  opacity: 0;
+  transition: all 0.3s ease;
+}
+
+.header .menu_overlay.active {
+  visibility: visible;
+  opacity: 1;
+}
+
+.header .menu > .menu_item > .sub_menu {
+  width: 360px;
+  position: absolute;
+  left: -100%;
+  top: 100%;
+  background-color: #130c0c;
+  padding: clamp(0.69rem, 0.67rem + 0.09vw, 0.75rem);
+  border-top: solid 3px #bb0722;
+  transition: all ease 0.3s;
+  opacity: 0;
+  visibility: hidden;
+}
+
+@media (min-width: 992px) {
+  .header .menu > .menu_item_has_children:hover > .sub_menu {
+    transform: translateY(0);
+    opacity: 1;
+    visibility: visible;
   }
-  nav {
-    position: absolute;
-    padding-top: clamp(3.5rem, 3.33rem + 0.74vw, 4rem);
-    padding-left: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
-    padding-right: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
+  .header .menu > .menu_item:hover > a .fa-solid {
+    transform: rotate(-90deg);
+  }
+}
+.header .menu > .menu_item > .sub_menu > .menu_item {
+  display: block;
+}
+
+.header .menu > .menu_item > .sub_menu > .menu_item > a {
+  font-family: "Open Sans", sans-serif;
+  font-size: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
+  text-transform: uppercase;
+  font-size: "Open Sans", sans-serif;
+  font-size: clamp(0.69rem, 0.67rem + 0.09vw, 0.75rem);
+  display: block;
+  padding: clamp(0.69rem, 0.67rem + 0.09vw, 0.75rem) 0;
+  color: #FFFFFF;
+  transition: all ease 0.3s;
+}
+
+.open_nav_menu {
+  height: 34px;
+  width: 40px;
+  background-color: salmon;
+  margin-right: clamp(0.69rem, 0.67rem + 0.09vw, 0.75rem);
+  display: none;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  border-radius: 2px;
+}
+
+.open_nav_menu span {
+  display: block;
+  height: 2px;
+  width: 24px;
+  background-color: #FFFFFF;
+  position: relative;
+}
+
+.open_nav_menu span:before,
+.open_nav_menu span:after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  background-color: #FFFFFF;
+  box-sizing: border-box;
+}
+
+.open_nav_menu span:before {
+  top: -7px;
+}
+
+.open_nav_menu span:after {
+  top: 7px;
+}
+
+.header .close_nav_menu {
+  height: 40px;
+  width: 40px;
+  background-color: #fff;
+  margin: 0 0 clamp(0.88rem, 0.83rem + 0.19vw, 1rem) clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
+  cursor: pointer;
+  display: none;
+  align-items: center;
+  justify-content: center;
+}
+
+.header .close_nav_menu > img {
+  width: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
+}
+
+/*
+Mobile Responsiveness------------------------
+*/
+@media (max-width: 991px) {
+  .header .nav_menu {
+    position: fixed;
+    right: -360px;
+    visibility: hidden;
     top: 0;
-    left: 0;
-    min-height: 100vh;
-    width: 100%;
+    width: 360px;
+    height: 100%;
+    overflow-y: auto;
     background-color: #130c0c;
-    z-index: 50;
-    transform: translateY(-120%);
+    z-index: 1000;
+    padding: clamp(0.88rem, 0.83rem + 0.19vw, 1rem) 0;
+    transition: all ease 0.5s;
   }
-  nav .links_container {
-    flex-direction: column !important;
-    align-items: flex-start !important;
-    justify-content: center !important;
-    gap: clamp(0.88rem, 0.83rem + 0.19vw, 1rem) !important;
+  .header .nav_menu.open {
+    visibility: visible;
+    right: 0px;
   }
-  nav .links_container .drop_down_menu {
+  .header .menu > .menu_item {
+    display: block;
+    margin: 0;
+  }
+  .header .menu > .menu_item_has_children > a {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .header .menu > .menu_item > a {
+    padding: clamp(0.69rem, 0.67rem + 0.09vw, 0.75rem) clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
+    border-bottom: 1px solid rgba(225, 225, 225, 0.1);
+  }
+  .header .menu > .menu_item_has_children.active > a > .fa-solid {
+    transform: rotate(-90deg);
+  }
+  .header .menu > .menu_item > .sub_menu {
+    width: 100%;
     position: relative;
+    left: auto;
+    top: auto;
+    opacity: 1;
+    visibility: visible;
+    background-color: transparent;
+    border: none;
+    transform: translateY(0px);
+    padding: 0;
+    max-height: 0;
+    overflow: hidden;
   }
-  nav .links_container .drop_down_menu .drop_down {
-    position: relative !important;
-    top: 0 !important;
-    left: 0 !important;
-    z-index: 100;
-    padding: 0 !important;
-    padding-top: 16px !important;
+  .header .menu > .menu_item > .sub_menu > .menu_item > a {
+    padding: clamp(0.69rem, 0.67rem + 0.09vw, 0.75rem) clamp(1.75rem, 1.67rem + 0.37vw, 2rem);
+    border-bottom: solid 1px rgba(225, 225, 225, 0.1);
+    margin: 0;
   }
-  .mobile_btn {
-    position: absolute !important;
-    display: block !important;
-    right: clamp(0.88rem, 0.83rem + 0.19vw, 1rem) !important;
-    top: clamp(1.75rem, 1.67rem + 0.37vw, 2rem) !important;
+  .header .close_nav_menu,
+  .open_nav_menu {
+    display: flex;
   }
 }
 footer {
