--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,232 +1,261 @@
+body{
+    line-height:1.5 ;
+}
 
+// Prevents the nav from scrolling
+body.hidden-scroll{
+    overflow-y: hidden;
+}
+
+// section{
+//     min-height: 100vh;
+//     width: 100%;
+//     background-color: rgb(19, 18, 19);
+//     display: block;
+//     overflow-x: hidden;
+// }
+
+.header_container{
+    max-width: 1170px;
+    margin: auto;
+    // padding: 0 $space_l_32;
+}
 
 header{
-    height: auto;
-    width: 100%;
-    padding: $space_s_16 0;
+    position: absolute;
     background-color: $secondary_colour;
-    // position: absolute;
-    // top: 0;
-    // left: 0;
-    // z-index: 100;
+    width: 100%;
+    left: 0;
+    top: 0;
+    z-index: 99;
+
+}
+
+.header_bottom{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: $space_xs_12 0;
+}
+.header .logo{
+    // padding: 0 $space_s_16;
+}
+.header .logo a > img{
+    height: $space_xl_48;
+}
+
+.header_bottom .nav_menu{
+    // background-color: salmon;
+}
+
+.header .menu > .menu_item{
+    display: inline-block;
+    margin-left: $space_s_16;
+    position: relative;
+}
+.header .menu > .menu_item > a{
+    @include button_text($alt_font);
+    display: block;
+    padding: $space_xs_12 0;
+    color: $white_colour;
+    transition: all ease 0.3s;
+}
+.header .menu > .menu_item > a .fa-solid{
+display: inline-block;
+margin-left: 5px;
+transition: all ease 0.3s;
+position: relative;
+pointer-events: none;
+
+}
+
+
+.header .menu > .menu_item > .sub_menu > .menu_item:hover > a,
+.header .menu > .menu_item:hover > a{
+    color: $primary_colour;
     
-    .fa-solid{
-        color: $primary_colour;
-        font-size: $space_s_16;
+}
+.header .menu_overlay{
+    position: fixed;
+    z-index: 999;
+    background-color: rgba(0,0,0,0.8);
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    visibility: hidden;
+    opacity: 0;
+    transition: all 0.3s ease;
 
-    }
 }
 
-
-
-.navigation_top{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    padding-bottom: $space_s_16;
-    border-bottom: solid 1px rgba(255, 255, 255, 0.1);
-    p{
-        // @include body_copy($main_font,$white_colour)
-        font-family: $alt_font;
-        font-size: 14px;
-        color: $white_colour;
-    }
-    a{
-        @include body_copy($main_font,$white_colour);
-        font-family: $alt_font;
-        font-size: 14px;
-        color: $white_colour;
-        transition: all ease 0.5s;
-        &:hover{
-            opacity: 0.5;
-        }
-    }
-    .navigation_top_left{
-        li{
-            cursor: pointer;
-        }
-    }
-    .navigation_top_right{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: $space_l_32;
-    .navigation_top_right_contact{
-        display: flex;
-        flex-direction: row;
-        gap: 8px;
-        align-items: center;
-    }
-    .navigation_top_right_hours{
-        display: flex;
-        flex-direction: row;
-        gap: 8px;
-        align-items: center;
-    }
-    }
+.header .menu_overlay.active{
+    visibility: visible;
+    opacity: 1;
+}
+.header .menu > .menu_item > .sub_menu{
+    width: 360px;
+    position: absolute;
+    left: -100%;
+    top: 100%;
+    background-color: $secondary_colour;
+    padding: $space_xs_12;
+    border-top: solid 3px $primary_colour;
+    // transform: translateY(-12px);
+    transition: all ease 0.3s;
+    opacity: 0;
+    visibility: hidden;
 }
 
-.navigation_bottom{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: $space_s_16;
-
-    .navigation_bottom_left{
-        .logo{
-            img{
-                height: $space_xl_48;
-                
-            }
-        }
+@media(min-width: 992px){
+    //hover on service link
+    .header .menu >.menu_item_has_children:hover > .sub_menu{
+        transform: translateY(0);
+        opacity: 1;
+        visibility: visible;
     }
-    .navigation_bottom_right{
-      nav{
-        .links_container{
-            display: flex;
-            flex-direction: row;
-            gap: $space_l_32;
-            align-items: center;
-            
-            .link_item{
-                display: inline-block;
-                a{
-                    @include body_copy($alt_font, $white_colour);
-                    transition: all ease 0.5s;
-                    &:hover{
-                        color: $primary_colour;
-                    }
-                }   
-            }
-            .drop_down_menu{
-                position: relative;
-                margin: 0;
-                padding: 0;
-                    button{
-                        @include body_copy($alt_font, $white_colour);background: transparent;
-                        border: none;
-                        transition: all ease 0.5s;
-                        margin: 0;
-                        padding: 0;
-                        cursor: pointer;
-
-                        .fa-solid{
-                            color: $primary_colour;
-                            font-size: $space_s_16;
-                            padding-left: 8px;
-
-                           
-                    
-                        }
-                        &:hover{
-                            color: $primary_colour;
-                        }
-                    }
-                    .drop_down{
-                        display: flex ;
-                        flex-direction: column;
-                        justify-content: center;
-                        gap: 12px;
-                        position: absolute;
-                        top: $space_xl_48;
-                        left: -64px;
-                        width: 0;
-                        height: 0;
-                        visibility: none;
-                        opacity: 0;
-                        // transform: translateY(-10px);
-                        background-color: $secondary_colour;
-                        z-index: 100;
-                        padding: 0  $space_l_32  $space_l_32 $space_l_32 ;
-                       
-                    }
-            }
-        }
-       
-      }  
+    // hover for chevron
+    .header .menu > .menu_item:hover > a .fa-solid{
+        transform: rotate(-90deg);
     }
-    .mobile_btn{
-        display: none;
-        position: relative;
-        z-index: 1000;
-        .mobile_btn_flex{
-            display: flex;
-            flex-direction: column;
-            gap: 6px;
-            padding: 8px;
-            background-color: #fff;
-            border-radius: 4px;
-            cursor: pointer;
-
-            .btn_line{
-                height: 2px;
-                width: $space_l_32;
-                background-color: $primary_colour ;
-            }
-        }
-        
-    }
+    
 }
 
+.header .menu > .menu_item > .sub_menu > .menu_item{
+    display: block;
+}
+.header .menu > .menu_item > .sub_menu > .menu_item > a{
+@include button_text($alt_font);
+font-size: $alt_font;
+font-size: $space_xs_12;
+display: block;
+padding: $space_xs_12 0;
+color: $white_colour;
+transition: all ease 0.3s;
+}
 
+.open_nav_menu{
+    height: 34px;
+    width: 40px;
+    background-color: salmon;
+    margin-right: $space_xs_12;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    border-radius: 2px;
+   
+}
 
-//Media Queries
-@media screen and (max-width: 1008px){
-    .navigation_top{
-        display:none !important;
+// Mobile nav button starts
+.open_nav_menu span{
+    display: block;
+    height:2px;
+    width: 24px;
+    background-color: $white_colour;
+    position: relative;
+}
 
-    }
+.open_nav_menu span:before,
+.open_nav_menu span:after{
+    content:"";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    background-color:$white_colour;
+    box-sizing: border-box;
+}
 
-    nav{
-        position: absolute;
-        padding-top: $space_xxl_64;
-        padding-left: $space_s_16;
-        padding-right: $space_s_16;
+.open_nav_menu span:before{
+    top: -7px;
+}
+.open_nav_menu span:after{
+    top: 7px;
+}
+
+.header .close_nav_menu{
+    height: 40px;
+    width: 40px;
+    background-color: #fff;
+    margin:0 0 $space_s_16 $space_s_16;
+    cursor: pointer;
+    display: none;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.header .close_nav_menu > img{
+    width: $space_m_24;
+    
+}
+
+/*
+Mobile Responsiveness------------------------
+*/
+
+@media(max-width: 991px){
+    .header .nav_menu{
+        position: fixed;
+        right: -360px;
+        visibility: hidden;
         top: 0;
-        left: 0;
-        min-height: 100vh;
-        width: 100%;
+        width: 360px;
+        height: 100%;
+        overflow-y: auto;
         background-color: $secondary_colour;
-        z-index: 50;
-        transform: translateY(-120%);
-       
-        .links_container{
-            
-            flex-direction: column !important;
-            align-items: flex-start !important;
-            justify-content: center !important;
-            gap: $space_s_16 !important;
-            
-            .drop_down_menu{
-                position: relative;
-                .drop_down{
-                   
-                    position: relative  !important;
-                    top: 0 !important;
-                    left: 0!important;
-                    // min-width: 100px !important;
-                    z-index: 100;
-                    // opacity: 0 !important;
-                    // height: 0 !important;
-                    padding: 0 !important ;
-                    padding-top: 16px !important;
-                    .drop_down_item{
-    
-                    }
-                }
-            }
-            
-        }
-       
-      }
-      
-      .mobile_btn{
-        position:absolute !important ;
-        display: block !important;
-        right:$space_s_16 !important ;
-        top:$space_l_32 !important;
-      }
+        z-index: 1000;
+        padding: $space_s_16 0;
+        transition: all ease 0.5s;
+    }
+    .header .nav_menu.open{
+        visibility: visible;
+        right: 0px;
+    }
+    .header .menu > .menu_item{
+        display: block;
+        margin: 0;        
+    }
 
+    .header .menu > .menu_item_has_children > a{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    
+    }
+    .header .menu > .menu_item > a{
+        padding: $space_xs_12 $space_s_16;
+        border-bottom: 1px solid rgba(225,225,225, 0.1);
+    }
+    .header .menu > .menu_item_has_children.active > a >.fa-solid{
+       transform: rotate(-90deg);
+    }
+    .header .menu > .menu_item > .sub_menu{
+        width: 100%;
+        // padding: $space_s_16 0;
+        position: relative;
+        left: auto;
+        top: auto;
+        opacity: 1;
+        visibility: visible;
+        background-color: transparent;
+        border: none;
+        transform: translateY(0px);
+        padding: 0 ;
+        max-height: 0;
+        overflow: hidden;
+    }
+
+    .header .menu > .menu_item > .sub_menu > .menu_item > a{
+        padding: $space_xs_12 $space_l_32;
+        border-bottom: solid 1px rgba(225,225,225, 0.1);
+        margin:0 ;
+
+    }
+
+    .header .close_nav_menu,
+    .open_nav_menu{
+        display: flex;
+    }
 }
